# scale-wise-admin

./: .env.desktop  ARCHIVED_BACKEND_MIGRATION_GUIDE.md  BACKEND_DOCUMENTATION.md  DATABASE_DOCUMENTATION.md  DESKTOP_APP_CONVERSION_GUIDE.md  DESKTOP_APP_SETUP_GUIDE.md  DESKTOP_LOCAL_SETUP.md  DUAL_MODE_DEPLOYMENT_GUIDE.md  FRONTEND_DOCUMENTATION.md  INTEGRATION_GUIDE.md  NODEJS_BACKEND_GUIDE.md  QUICK_START.md  README.md  TAURI_MIGRATION_GUIDE.md  WINDOWS_TROUBLESHOOTING.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/layout/: AppLayout.tsx  AppSidebar.tsx  Navbar.tsx
src/components/operator/: AccessBlockedDialog.tsx  BillManagement.tsx  BillPrintView.tsx  DualCameraFeed.tsx  ManualEntry.tsx  OpenBillManagement.tsx  (+7 more)
src/config/: api.ts
src/contexts/: AccessControlContext.tsx  AuthContext.tsx  NotificationContext.tsx
src/hooks/: useOnlineStatus.ts  useWeighbridge.tsx
src/pages/: Dashboard.tsx  FirstTimeSetup.tsx  Login.tsx  MastersParties.tsx  MastersProducts.tsx  MastersVehicles.tsx  OperatorConsole.tsx  PrintSettings.tsx  Reports.tsx  SettingsProfile.tsx  SettingsSerialNumber.tsx  SettingsUsers.tsx  SettingsWeighbridge.tsx  Weighments.tsx
src/services/: apiClient.ts  billService.ts  cameraService.ts  dynamicDataService.ts  masterDataService.ts  printTemplateService.ts  unifiedServices.ts  weighbridgeService.ts
src/types/: printTemplate.ts  weighment.ts
src/utils/: exportUtils.ts  mockData.ts
(+24 files in other folders)
